--- a/one_dimensional_harmonics_oscillator_forward_problem.ipynb
+++ b/one_dimensional_harmonics_oscillator_forward_problem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6yyvIXzSbuNLGMSkz14Nt",
+      "authorship_tag": "ABX9TyMb1VJfuS9pBCnmuFWHrkST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,46 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# 1D Harmonics Oscillator: Forward Problem"
+      ],
       "metadata": {
-        "id": "Q1nzJcx8cPii"
+        "id": "tUHNl3iEdEfk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JQJdUO40dAaP"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Disclaimers\n",
+        "This notebook was modified based on\n",
+        "\n",
+        "\n",
+        "1.   https://github.com/benmoseley/harmonic-oscillator-pinn\n",
+        "2.   https://github.com/benmoseley/FBPINNs\n",
+        "\n",
+        "My specific contributions include\n",
+        "\n",
+        "\n",
+        "1.   Separate the effects of Physics loss vs data loss\n",
+        "2.   Incorporate boundary loss\n",
+        "3.   How to improve training using Physics loss only via scheduled training\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1h8yuYokdMpO"
+      }
     }
   ]
 }
