Physics loss only is working

--- a/one_dimensional_harmonics_oscillator_forward_problem.ipynb
+++ b/one_dimensional_harmonics_oscillator_forward_problem.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "A100",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -71,6 +73,7 @@
       "source": [
         "#@title Setup Codes\n",
         "from PIL import Image as PILImage\n",
+        "from IPython.display import display, Image as DisplayImage\n",
         "\n",
         "import numpy as np\n",
         "import torch\n",
@@ -87,7 +90,7 @@
         "X_MAX = 1\n",
         "# Training constants\n",
         "NUM_TRAIN_POINTS = 30\n",
-        "NUM_TRAIN_STEPS = 5000\n",
+        "NUM_TRAIN_STEPS = 50000\n",
         "LEARNING_RATE = 1e-4\n",
         "PHYSICS_SCLAE = 1e-4\n",
         "LOG_EVERY = 150\n",
@@ -131,7 +134,7 @@
         "  y = oscillator(delta, w0, x).view(-1,1).clone().detach().requires_grad_(True)\n",
         "  return x, y\n",
         "\n",
-        "def plot_result(x,y,x_data,y_data,yh,xp=None):\n",
+        "def plot_result(x,y,x_data,y_data,yh,xp=None,step=0,title=\"PINN Results\"):\n",
         "    \"Pretty plot training results\"\n",
         "    plt.figure(figsize=(8,4))\n",
         "    plt.plot(x,y, color=\"grey\", linewidth=2, alpha=0.8, label=\"Exact solution\")\n",
@@ -144,7 +147,7 @@
         "    plt.setp(l.get_texts(), color=\"k\")\n",
         "    plt.xlim(-0.05, 1.05)\n",
         "    plt.ylim(-1.1, 1.1)\n",
-        "    plt.text(1.065,0.7,\"Training step: %i\"%(i+1),fontsize=\"xx-large\",color=\"k\")\n",
+        "    plt.text(1.065,0.7,\"Training step: %step\"%(step+1),fontsize=\"xx-large\",color=\"k\")\n",
         "    plt.axis(\"off\")\n",
         "\n",
         "def save_gif_PIL(outfile, files, fps=5, loop=0):\n",
@@ -204,25 +207,28 @@
         "          y_hat_ref = model(x_ref)\n",
         "          if train_type == TrainType.PHYSICS:\n",
         "            plot_title = \"Physics Loss Only\"\n",
-        "            fname = \"plots/pinn_physics_%.8i.png\"%(step+1)\n",
+        "            fname = f\"pinn_physics_{step:08d}.png\"\n",
         "          elif train_type == TrainType.DATA:\n",
         "            plot_title = \"Data Loss Only\"\n",
-        "            fname = \"plots/pinn_data_%.8i.png\"%(step+1)\n",
+        "            fname = f\"pinn_data_{step:08d}.png\"\n",
         "          else:\n",
         "            plot_title = \"Physics + Data Loss\"\n",
-        "            fname = \"plots/pinn_physics_data%.8i.png\"%(step+1)\n",
+        "            fname = f\"pinn_physics_data_{step:08d}.png\"\n",
         "          plot_result(x_ref,y_ref,x_train.detach()[:num_train_points],y_train.detach()[:num_train_points], y_hat_ref.detach(), x_physics.detach(), step,\n",
         "                      title=plot_title)\n",
-        "          plt.savefig(file, bbox_inches='tight', pad_inches=0.1, dpi=100, facecolor=\"white\")\n",
+        "          plt.savefig(fname, bbox_inches='tight', pad_inches=0.1, dpi=100, facecolor=\"white\")\n",
         "          plot_files.append(fname)\n",
         "          if (step+1) % 6000 == 0: plt.show()\n",
         "          else: plt.close(\"all\")\n",
         "  try:\n",
         "      if train_type == TrainType.PHYSICS:\n",
-        "          fname = \"plots/pinn_physics_gif\"\n",
-        "      save_gif_PIL(\"pinn.gif\", files, fps=20, loop=0)\n",
+        "          fname = \"pinn_physics.gif\"\n",
+        "      save_gif_PIL(fname, plot_files, fps=20, loop=0)\n",
+        "      display(DisplayImage(filename=fname))\n",
         "  except Exception as e:\n",
         "      print(f\"GIF creation skipped: {e}\")\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -235,21 +241,10 @@
       ],
       "metadata": {
         "id": "JQJdUO40dAaP",
-        "outputId": "a48575c2-7573-4dc7-fcf3-39307d148efa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": 44,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -258,10 +253,22 @@
         "check_gpu()"
       ],
       "metadata": {
-        "id": "U9kpw-tFl84o"
+        "id": "U9kpw-tFl84o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6cec0eb5-1225-484d-dec1-7c998d0f8f06"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU is not available. Using CPU\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -289,9 +296,10 @@
         "outputId": "9cde6bc9-9bde-43e3-f3be-5efceb79f58d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "cellView": "form"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +321,8 @@
         "outputId": "5ca8e097-feee-4107-9b70-aacfab6b239f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
