--- a/one_dimensional_harmonics_oscillator_inverse_problem.ipynb
+++ b/one_dimensional_harmonics_oscillator_inverse_problem.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5uLJkN9EfBs6B/Ni6YoeJ",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPxXA77C6xZCyFcWEFxz5R7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -44,14 +46,20 @@
         "Governing equation:\n",
         "\n",
         "$$\n",
-        "m \\dfrac{d^2 x}{d t^2} + \\mu \\dfrac{d x}{d t} + kx = 0~,\n",
+        "m \\dfrac{d^2 x}{d t^2} + \\mu \\dfrac{d x}{d t} + kx = 0,\n",
         "$$\n",
         "with the initial conditions\n",
         "$$\n",
-        "x(0) = 1~~,~~\\dfrac{d x}{d t} = 0~.\n",
+        "x(0) = 1~~,~~\\dfrac{d x}{d t} = 0\n",
         "$$\n",
         "\n",
-        "where $m$, $\\mu$, and $k$ are unknown."
+        "where $m$, $\\mu$, and $k$ are unknown.\n",
+        "\n",
+        "We will solve the inverse problem in the under-damped case:\n",
+        "\n",
+        "$$\n",
+        "\\delta < \\omega_0~,~~~~\\mathrm{where}~~\\delta = \\dfrac{\\mu}{2m}~,~\\omega_0 = \\sqrt{\\dfrac{k}{m}}\n",
+        "$$"
       ],
       "metadata": {
         "id": "AOaUpcdYsJ_L"
@@ -59,9 +67,310 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#@title Setup Codes\n",
+        "!pip install torchview\n",
+        "\n",
+        "from PIL import Image as PILImage\n",
+        "from IPython.display import display, Image as DisplayImage\n",
+        "\n",
+        "import numpy as np\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from enum import Enum, auto\n",
+        "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
+        "from torchview import draw_graph\n",
+        "\n",
+        "# Problem Constants\n",
+        "# Physics constants\n",
+        "DELTA = 2\n",
+        "W0 = 20\n",
+        "X_MIN = 0\n",
+        "X_MAX = 1\n",
+        "# Training constants\n",
+        "NUM_TRAIN_POINTS = 30\n",
+        "NUM_TRAIN_STEPS = 40000\n",
+        "LEARNING_RATE = 1e-4\n",
+        "PHYSICS_SCLAE = 1e-4\n",
+        "LOG_EVERY = 150\n",
+        "SHOW_EVERY = 6000\n",
+        "\n",
+        "\n",
+        "def oscillator(d, w0, x):\n",
+        "    \"\"\"Defines the analytical solution to the 1D underdamped harmonic oscillator problem.\n",
+        "    Equations taken from: https://beltoforion.de/en/harmonic_oscillator/\"\"\"\n",
+        "    assert d < w0\n",
+        "    w = np.sqrt(w0**2 - d**2)\n",
+        "    phi = np.arctan(-d / w)\n",
+        "    A = 1 / (2 * np.cos(phi))\n",
+        "    cos = torch.cos(phi + w * x)\n",
+        "    sin = torch.sin(phi + w * x)\n",
+        "    exp = torch.exp(-d * x)\n",
+        "    y = exp * 2 * A * cos\n",
+        "    return y\n",
+        "\n",
+        "\n",
+        "class FCN(nn.Module):\n",
+        "    \"Defines a connected network\"\n",
+        "\n",
+        "    def __init__(self, N_INPUT, N_OUTPUT, N_HIDDEN, N_LAYERS):\n",
+        "        super().__init__()\n",
+        "        activation = nn.Tanh\n",
+        "        self.fcs = nn.Sequential(*[nn.Linear(N_INPUT, N_HIDDEN), activation()])\n",
+        "        self.fch = nn.Sequential(\n",
+        "            *[\n",
+        "                nn.Sequential(*[nn.Linear(N_HIDDEN, N_HIDDEN), activation()])\n",
+        "                for _ in range(N_LAYERS - 1)\n",
+        "            ]\n",
+        "        )\n",
+        "        self.fce = nn.Linear(N_HIDDEN, N_OUTPUT)\n",
+        "\n",
+        "        # Initialize hidden layers\n",
+        "        first_linear = self.fcs[0]\n",
+        "        torch.nn.init.xavier_normal_(\n",
+        "            first_linear.weight, gain=nn.init.calculate_gain(\"tanh\")\n",
+        "        )\n",
+        "        nn.init.zeros_(first_linear.bias)\n",
+        "        for block in self.fch:\n",
+        "            linear = block[0]\n",
+        "            torch.nn.init.xavier_normal_(\n",
+        "                linear.weight, gain=nn.init.calculate_gain(\"tanh\")\n",
+        "            )\n",
+        "            nn.init.zeros_(linear.bias)\n",
+        "        # Final layer: small random weights + bias in (0.25, 0.75)\n",
+        "        nn.init.xavier_normal_(self.fce.weight, gain=1.0)\n",
+        "        nn.init.normal_(self.fce.bias, 0.25, 0.5)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.fcs(x)\n",
+        "        x = self.fch(x)\n",
+        "        x = self.fce(x)\n",
+        "        return x\n",
+        "\n",
+        "class InversePINN(nn.Module):\n",
+        "  def __init__(self, N_INPUT, N_OUTPUT, N_HIDDEN, N_LAYERS, delta_init=1.5, w0_init=15.0):\n",
+        "    super().__init__()\n",
+        "    self.solution_network = FCN(N_INPUT, N_OUTPUT, N_HIDDEN, N_LAYERS)\n",
+        "    # delta and w0 are global learnable parameters\n",
+        "    self.delta = nn.Parameter(torch.tensor(delta_init))\n",
+        "    self.w0 = nn.Parameter(torch.tensor(w0_init))\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return self.solution_network(x)\n",
+        "\n",
+        "  def get_physics_parameters(self):\n",
+        "    # Enforce constraint: delta < w0\n",
+        "    delta_constraint = torch.clamp(self.delta, max=self.w0 - 0.1)\n",
+        "    return delta_constraint, self.w0\n",
+        "\n",
+        "  def get_solution_parameters(self):\n",
+        "    self.delta, self.w0 = self.get_physics_parameters()\n",
+        "    return self.delta, self.w0\n",
+        "\n",
+        "  def get_w0(self):\n",
+        "    return self.w0\n",
+        "\n",
+        "def generate_train_data(delta, w0, num_points, x_min=0, x_max=1):\n",
+        "    x = (\n",
+        "        torch.linspace(x_min, x_max, num_points)\n",
+        "        .view(-1, 1)\n",
+        "        .detach()\n",
+        "        .requires_grad_(True)\n",
+        "    )\n",
+        "    y = oscillator(delta, w0, x).view(-1, 1).clone().detach().requires_grad_(True)\n",
+        "    return x, y\n",
+        "\n",
+        "\n",
+        "def plot_result(x, y, x_data, y_data, yh, xp=None, step=0, title=\"PINN Results\"):\n",
+        "    \"Pretty plot training results\"\n",
+        "    plt.figure(figsize=(8, 4))\n",
+        "    plt.plot(x, y, color=\"grey\", linewidth=2, alpha=0.8, label=\"Exact solution\")\n",
+        "    plt.plot(\n",
+        "        x,\n",
+        "        yh,\n",
+        "        color=\"tab:blue\",\n",
+        "        linewidth=4,\n",
+        "        alpha=0.8,\n",
+        "        label=\"Neural network prediction\",\n",
+        "    )\n",
+        "    plt.scatter(\n",
+        "        x_data, y_data, s=60, color=\"tab:orange\", alpha=0.4, label=\"Training data\"\n",
+        "    )\n",
+        "    if xp is not None:\n",
+        "        plt.scatter(\n",
+        "            xp,\n",
+        "            -0 * torch.ones_like(xp),\n",
+        "            s=60,\n",
+        "            color=\"tab:green\",\n",
+        "            alpha=0.4,\n",
+        "            label=\"Physics loss training locations\",\n",
+        "        )\n",
+        "    l = plt.legend(loc=(1.01, 0.34), frameon=False, fontsize=\"large\")\n",
+        "    plt.setp(l.get_texts(), color=\"k\")\n",
+        "    plt.xlim(-0.05, 1.05)\n",
+        "    plt.ylim(-1.1, 1.1)\n",
+        "    plt.text(\n",
+        "        1.065, 0.7, \"Training step: %step\" % (step + 1), fontsize=\"xx-large\", color=\"k\"\n",
+        "    )\n",
+        "    plt.title(title, fontsize=\"xx-large\")\n",
+        "    plt.axis(\"off\")\n",
+        "\n",
+        "\n",
+        "def save_gif_PIL(outfile, files, fps=5, loop=0):\n",
+        "    \"Helper function for saving GIFs\"\n",
+        "    imgs = [PILImage.open(file) for file in files]\n",
+        "    imgs[0].save(\n",
+        "        fp=outfile,\n",
+        "        format=\"GIF\",\n",
+        "        append_images=imgs[1:],\n",
+        "        save_all=True,\n",
+        "        duration=int(1000 / fps),\n",
+        "        loop=loop,\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "\n",
+        "def train(\n",
+        "    delta,\n",
+        "    w0,\n",
+        "    num_train_points,\n",
+        "    num_train_steps\n",
+        "):\n",
+        "    x_train, y_train = generate_train_data(\n",
+        "            delta, w0, num_points=num_train_points, x_min=X_MIN, x_max=X_MAX\n",
+        "        )\n",
+        "    x_physics, _ = generate_train_data(\n",
+        "            delta, w0, num_points=num_train_points, x_min=X_MIN, x_max=X_MAX\n",
+        "        )\n",
+        "\n",
+        "    # Full-domain resolution for plotting\n",
+        "    x_ref = torch.linspace(0, 1, 1000).view(-1, 1)\n",
+        "    y_ref = oscillator(delta, w0, x_ref)\n",
+        "\n",
+        "    torch.manual_seed(123)\n",
+        "    model = InversePINN(1, 1, 32, 3)\n",
+        "    optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+        "\n",
+        "    plot_files = []\n",
+        "\n",
+        "    for step in range(1, num_train_steps + 1):\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "        # compute the \"physics loss\"\n",
+        "        y_hat_phys = model(x_physics)\n",
+        "        dy_dx_phys = torch.autograd.grad(\n",
+        "        y_hat_phys.sum(), x_physics, create_graph=True\n",
+        "            )[0]\n",
+        "        d2y_d2x_phys = torch.autograd.grad(\n",
+        "                dy_dx_phys.sum(), x_physics, create_graph=True\n",
+        "            )[0]\n",
+        "        mu, k = 2 * delta, w0**2\n",
+        "        residual = d2y_d2x_phys + mu * dy_dx_phys + k * y_hat_phys\n",
+        "        physics_loss = PHYSICS_SCLAE * residual.pow(2).mean()\n",
+        "\n",
+        "        # compute the \"data loss\"\n",
+        "        y_hat_data = model(x_train)\n",
+        "        data_loss = (y_hat_data - y_train).pow(2).mean()\n",
+        "        loss = physics_loss + data_loss\n",
+        "\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        # plot the result as training progresses\n",
+        "        if step % LOG_EVERY == 0:\n",
+        "            with torch.no_grad():\n",
+        "                y_hat_ref = model(x_ref)\n",
+        "                plot_title = f\"Physics + Data Loss\\n{delta = }, {w0 = }\"\n",
+        "                fname = f\"pinn_physics_data_{step:08d}.png\"\n",
+        "                plot_result(\n",
+        "                    x_ref,\n",
+        "                    y_ref,\n",
+        "                    x_train.detach()[:num_train_points],\n",
+        "                    y_train.detach()[:num_train_points],\n",
+        "                    y_hat_ref.detach(),\n",
+        "                    x_physics.detach()[:num_train_points],\n",
+        "                    step,\n",
+        "                    title=plot_title,\n",
+        "                )\n",
+        "                plt.savefig(\n",
+        "                    fname,\n",
+        "                    bbox_inches=\"tight\",\n",
+        "                    pad_inches=0.1,\n",
+        "                    dpi=100,\n",
+        "                    facecolor=\"white\",\n",
+        "                )\n",
+        "                plot_files.append(fname)\n",
+        "                if (step + 1) % SHOW_EVERY == 0:\n",
+        "                    plt.show()\n",
+        "                else:\n",
+        "                    plt.close(\"all\")\n",
+        "    try:\n",
+        "        fname = \"pinn_physics_data.gif\"\n",
+        "        save_gif_PIL(fname, plot_files, fps=20, loop=0)\n",
+        "        display(DisplayImage(filename=fname))\n",
+        "    except Exception as e:\n",
+        "        print(f\"GIF creation skipped: {e}\")\n",
+        "\n",
+        "\n",
+        "def check_gpu():\n",
+        "    if torch.cuda.is_available():\n",
+        "        print(f\"{torch.cuda.device_count()} GPU(s) are available\")\n",
+        "    else:\n",
+        "        print(\"GPU is not available. Using CPU\")"
+      ],
       "metadata": {
-        "id": "vA6Oqlu9tycw"
+        "id": "vA6Oqlu9tycw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b4c74843-3502-4fa6-f9b3-db750b4ae8be"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: torchview in /usr/local/lib/python3.11/dist-packages (0.2.7)\n",
+            "Requirement already satisfied: graphviz in /usr/local/lib/python3.11/dist-packages (from torchview) (0.21)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Check Compute Resource\n",
+        "check_gpu()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cJU8hJvkwlNS",
+        "outputId": "4caca534-6f28-4558-80a6-79eac158a426"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 GPU(s) are available\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Training using Physics + Data Loss\n",
+        "train(DELTA, W0, NUM_TRAIN_POINTS, NUM_TRAIN_STEPS)"
+      ],
+      "metadata": {
+        "id": "h6yT1hKd2Uda"
       },
       "execution_count": null,
       "outputs": []
