Added inverse problem network

--- a/one_dimensional_harmonics_oscillator_inverse_problem.ipynb
+++ b/one_dimensional_harmonics_oscillator_inverse_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPxXA77C6xZCyFcWEFxz5R7",
+      "authorship_tag": "ABX9TyOZfqDeVuhEXRjiSsSQtrP8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         "X_MAX = 1\n",
         "# Training constants\n",
         "NUM_TRAIN_POINTS = 30\n",
-        "NUM_TRAIN_STEPS = 40000\n",
+        "NUM_TRAIN_STEPS = 25000\n",
         "LEARNING_RATE = 1e-4\n",
         "PHYSICS_SCLAE = 1e-4\n",
         "LOG_EVERY = 150\n",
@@ -104,7 +104,7 @@
         "    assert d < w0\n",
         "    w = np.sqrt(w0**2 - d**2)\n",
         "    phi = np.arctan(-d / w)\n",
-        "    A = 1 / (2 * np.cos(phi))\n",
+        "    A = 1 / (2 * torch.cos(phi))\n",
         "    cos = torch.cos(phi + w * x)\n",
         "    sin = torch.sin(phi + w * x)\n",
         "    exp = torch.exp(-d * x)\n",
@@ -266,7 +266,8 @@
         "        d2y_d2x_phys = torch.autograd.grad(\n",
         "                dy_dx_phys.sum(), x_physics, create_graph=True\n",
         "            )[0]\n",
-        "        mu, k = 2 * delta, w0**2\n",
+        "        delta_guess, w0_guess = model.get_physics_parameters()\n",
+        "        mu, k = 2 * delta_guess, w0_guess**2\n",
         "        residual = d2y_d2x_phys + mu * dy_dx_phys + k * y_hat_phys\n",
         "        physics_loss = PHYSICS_SCLAE * residual.pow(2).mean()\n",
         "\n",
@@ -282,7 +283,7 @@
         "        if step % LOG_EVERY == 0:\n",
         "            with torch.no_grad():\n",
         "                y_hat_ref = model(x_ref)\n",
-        "                plot_title = f\"Physics + Data Loss\\n{delta = }, {w0 = }\"\n",
+        "                plot_title = f\"Physics + Data Loss\\n delta = {delta_guess.item():.2f}, w0 = {w0_guess.item():.2f}\"\n",
         "                fname = f\"pinn_physics_data_{step:08d}.png\"\n",
         "                plot_result(\n",
         "                    x_ref,\n",
@@ -325,9 +326,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4c74843-3502-4fa6-f9b3-db750b4ae8be"
+        "outputId": "ec739cec-29d9-449a-cb11-d37dd5a707cf"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,9 +351,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cJU8hJvkwlNS",
-        "outputId": "4caca534-6f28-4558-80a6-79eac158a426"
+        "outputId": "0e05ef66-456d-4e5a-cb14-5cee257ebcda"
       },
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,10 +371,30 @@
         "train(DELTA, W0, NUM_TRAIN_POINTS, NUM_TRAIN_STEPS)"
       ],
       "metadata": {
-        "id": "h6yT1hKd2Uda"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 304
+        },
+        "id": "h6yT1hKd2Uda",
+        "outputId": "5b81739f-aedd-47a9-d4f7-088027cb86c4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "cos(): argument 'input' (position 1) must be Tensor, not numpy.float64",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3071527099.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#@title Training using Physics + Data Loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDELTA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNUM_TRAIN_POINTS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNUM_TRAIN_STEPS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-1756677456.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(delta, w0, num_train_points, num_train_steps)\u001b[0m\n\u001b[1;32m    169\u001b[0m     \u001b[0mnum_train_steps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m ):\n\u001b[0;32m--> 171\u001b[0;31m     x_train, y_train = generate_train_data(\n\u001b[0m\u001b[1;32m    172\u001b[0m             \u001b[0mdelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_points\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_train_points\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_min\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_MIN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_MAX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m         )\n",
+            "\u001b[0;32m/tmp/ipython-input-1756677456.py\u001b[0m in \u001b[0;36mgenerate_train_data\u001b[0;34m(delta, w0, num_points, x_min, x_max)\u001b[0m\n\u001b[1;32m    110\u001b[0m         \u001b[0;34m.\u001b[0m\u001b[0mrequires_grad_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m     )\n\u001b[0;32m--> 112\u001b[0;31m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moscillator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdelta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1756677456.py\u001b[0m in \u001b[0;36moscillator\u001b[0;34m(d, w0, x)\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw0\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marctan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0md\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m     \u001b[0mA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m     \u001b[0mcos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0msin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: cos(): argument 'input' (position 1) must be Tensor, not numpy.float64"
+          ]
+        }
+      ]
     }
   ]
 }
